--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,18 +1,9 @@
 name: Build for Desktop
 
 on:
-  push:
-    branches:
-      - '**'
-    paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
-  pull_request:
-    paths-ignore:
-      - 'README.md'
-      - 'LICENSE'
-  release:
-    types: [prereleased]
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 defaults:
   run:
@@ -39,18 +30,6 @@ jobs:
             has_msvc: true,
             has_release: true,
             vcpkgTriplet: x64-windows
-          }
-        - {
-            name: "Ubuntu", artifact: "Linux",
-            os: ubuntu-latest,
-            has_release: false,
-            vcpkgTriplet: x64-linux
-          }
-        - {
-            name: "macOS", artifact: "macOS",
-            os: macos-latest,
-            has_release: true,
-            vcpkgTriplet: x64-osx
           }
 
     steps:
